# DonRea

RansomShield/: README.md  alert_system.py  app.py  config.py  create_sounds.py  dbmodels.py  dependencies_list.txt  detection_engine.py  file_monitor.py  globals_manager.py  main.py  main_pyqt.py  main_tkinter.py  models.py  network_monitor.py  process_monitor.py  pyproject.toml  quarantine.py  ransomware_detection.db  replit.nix  run_app.bat  run_app.sh  run_pyqt.bat  run_pyqt.sh  sound_manager.py
RansomShield/attached_assets/: Pasted--startuml-left-to-right-direction-skinparam-packageStyle-rectangle-actor-User-as-User-actor--1743500935552.txt
RansomShield/data/: malicious_domains.txt  malicious_ips.txt
RansomShield/models/: __init__.py  cnn_model.h5  lstm_model.h5
RansomShield/static/css/: custom.css
RansomShield/static/js/: admin.js  dashboard.js
RansomShield/static/sounds/: README.md
RansomShield/templates/: admin.html  base.html  dashboard.html  login.html  quarantine.html  register.html  reports.html  settings.html
