[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.1.0",
    "flask-login==0.6.2",
    "flask==2.3.3",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "numpy==1.26.3",
    "psutil==5.9.8",
    "psycopg2-binary>=2.9.10",
    "watchdog==3.0.0",
    "sqlalchemy>=2.0.40",
    "werkzeug==2.3.7",
    "tensorflow==2.15.0",
    "pefile==2023.2.7",
    "flask-wtf==1.2.1",
    "pyqt6==6.6.1",
    "scikit-learn==1.3.2",
    "cryptography==41.0.7",
    "scapy>=2.6.1",
    "requests>=2.32.3",
]
